# shiplog

./: .gitattributes  .gitignore  .history-sync-trigger  AGENTS.md  API_SURFACE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  PR_BODY.md  README.md  RELEASE_0.5.0_EXECUTE.md  RELEASE_HANDOFF_0.2.0.md  RELEASE_HANDOFF_0.2.1.md  RELEASE_HANDOFF_0.3.0.md  RELEASE_HANDOFF_0.4.0.md  RELEASE_HANDOFF_0.5.0.md  RELEASE_HANDOFF_0.6.0.md  RELEASE_HANDOFF_0.7.0.md  RELEASE_HANDOFF_0.8.0.md  RELEASE_HANDOFF_0.9.0.md  RELEASE_STATUS_0.5.0.md  ROADMAP.md  cargo-mutants.toml  clippy.toml  clippy_output.txt  codecov.yml  create_corpus.py  deny.toml  ripr.toml  run_tests.ps1  test1_output.txt  test_output.txt
apps/shiplog/: Cargo.toml  README.md
apps/shiplog/benches/: redaction.rs
apps/shiplog/src/: cache_cli.rs  doctor.rs  evidence_debt.rs  github_activity.rs  intake_report_builder.rs  lib.rs  main.rs  review_quality.rs  review_quality_signals.rs  status.rs
apps/shiplog/tests/: cache.rs  cache_expiry.rs  cli_edge_cases.rs  cli_integration.rs  cluster_llm.rs  docs_commands.rs  e2e.rs  engine_bdd.rs  engine_bdd_workflows.rs  engine_cross_platform_paths.rs  engine_determinism.rs  engine_e2e_pipeline.rs  engine_error_paths.rs  engine_integration.rs  engine_property.rs  front_door_first_pack_smoke.rs  ingest_github_edge_cases.rs  ingest_github_error_paths.rs  ingest_github_integration.rs  ingest_gitlab.rs  ingest_json.rs  ingest_json_adversarial.rs  ingest_json_compat.rs  ingest_json_cross_platform_paths.rs  ingest_json_edge_cases.rs  ingest_json_error_paths.rs  ingest_linear.rs  intake_cold_start.rs  merge.rs  pipeline.rs  redact.rs  render_md.rs  team.rs  testkit_bdd_user_workflow.rs  workstreams.rs
crates/shiplog-actor/: Cargo.toml  README.md
crates/shiplog-actor/src/: lib.rs
crates/shiplog-actor/tests/: actor.rs
crates/shiplog-adapter/: Cargo.toml  README.md
crates/shiplog-adapter/src/: lib.rs
crates/shiplog-adapter/tests/: adapter.rs
crates/shiplog-aggregator/: Cargo.toml  README.md
crates/shiplog-aggregator/src/: lib.rs
crates/shiplog-aggregator/tests/: aggregator.rs
crates/shiplog-alias/: Cargo.toml  README.md
crates/shiplog-alias/src/: lib.rs
crates/shiplog-alias/tests/: alias.rs
crates/shiplog-archive/: Cargo.toml  README.md
crates/shiplog-archive/src/: lib.rs
crates/shiplog-archive/tests/: archive.rs
crates/shiplog-async/: Cargo.toml  README.md
crates/shiplog-async/src/: lib.rs
crates/shiplog-async/tests/: async_utils.rs
crates/shiplog-atomic/: Cargo.toml  README.md
crates/shiplog-atomic/src/: lib.rs
crates/shiplog-atomic/tests/: atomic.rs
crates/shiplog-auth/: Cargo.toml  README.md
crates/shiplog-auth/src/: lib.rs
crates/shiplog-auth/tests/: auth_tests.rs
crates/shiplog-backup/: Cargo.toml  README.md
crates/shiplog-backup/src/: lib.rs
crates/shiplog-backup/tests/: backup.rs
crates/shiplog-base64/: Cargo.toml  README.md
crates/shiplog-base64/src/: lib.rs
crates/shiplog-base64/tests/: base64_tests.rs
crates/shiplog-batcher/: Cargo.toml  README.md
crates/shiplog-batcher/src/: lib.rs
crates/shiplog-batcher/tests/: batcher.rs
crates/shiplog-bloom/: Cargo.toml  README.md
crates/shiplog-bloom/src/: lib.rs
crates/shiplog-bloom/tests/: bloom.rs
crates/shiplog-bst/: Cargo.toml  README.md
crates/shiplog-bst/src/: lib.rs
crates/shiplog-bst/tests/: bst.rs
crates/shiplog-btree/: Cargo.toml  README.md
crates/shiplog-btree/src/: lib.rs
crates/shiplog-btree/tests/: btree_tests.rs
crates/shiplog-bucket/: Cargo.toml  README.md
crates/shiplog-bucket/src/: lib.rs
crates/shiplog-bucket/tests/: bucket_tests.rs
crates/shiplog-buffer/: Cargo.toml  README.md
crates/shiplog-buffer/src/: lib.rs
crates/shiplog-buffer/tests/: buffer.rs
crates/shiplog-bundle/: Cargo.toml  README.md
crates/shiplog-bundle/src/: lib.rs
crates/shiplog-bundle/tests/: cross_platform_paths.rs  error_paths.rs  integration.rs  property.rs  snapshot.rs
crates/shiplog-cache/: Cargo.toml  README.md
crates/shiplog-cache-2q/: Cargo.toml  README.md
crates/shiplog-cache-2q/src/: lib.rs
crates/shiplog-cache-2q/tests/: cache_2q.rs
crates/shiplog-cache-arc/: Cargo.toml  README.md
crates/shiplog-cache-arc/src/: lib.rs
crates/shiplog-cache-arc/tests/: cache_arc.rs
crates/shiplog-cache-expiry/: Cargo.toml  README.md
crates/shiplog-cache-expiry/tests/: bdd_tests.rs  edge_cases.rs  integration_tests.rs  property_tests.rs  snapshot_tests.rs
crates/shiplog-cache-key/: Cargo.toml  README.md
crates/shiplog-cache-key/tests/: bdd_tests.rs  edge_cases.rs  integration_tests.rs  property_tests.rs  snapshot_tests.rs
crates/shiplog-cache-lru/: Cargo.toml  README.md
crates/shiplog-cache-lru/src/: lib.rs
crates/shiplog-cache-lru/tests/: cache_lru.rs
crates/shiplog-cache-sqlite/: Cargo.toml  README.md
crates/shiplog-cache-sqlite/src/: lib.rs
crates/shiplog-cache-sqlite/tests/: bdd_tests.rs  bdd_workflows.rs  edge_cases.rs  integration_expiry_tests.rs  property_tests.rs  stress.rs
crates/shiplog-cache-stats/: Cargo.toml  README.md
crates/shiplog-cache-stats/tests/: bdd_tests.rs  edge_cases.rs  integration_tests.rs  (+2 more)
crates/shiplog-cache-ttl/: Cargo.toml  README.md
crates/shiplog-channel/: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md  rust-toolchain.toml
fuzz/dictionaries/: json.dict  yaml.dict
fuzz/fuzz_targets/: cache_expiry.rs  cache_key.rs  cache_sqlite.rs  cache_stats.rs  cluster_llm_parse.rs  cluster_llm_prompt.rs  date_windows.rs  fuzz_cache_key.rs  fuzz_ingest_jsonl.rs  fuzz_semver_parse.rs  fuzz_team_config.rs  fuzz_url_parse.rs  parse_config.rs  parse_github_api.rs  parse_gitlab_api.rs  parse_jira_linear_api.rs  parse_jsonl.rs  parse_manual_events.rs  parse_plugin_manifest.rs  parse_template.rs  parse_workstreams.rs  receipt_markdown.rs  redact_event.rs  redact_policy.rs  redaction_profile.rs  redaction_projector.rs  redaction_repo.rs  render_md_packet.rs  workstream_cluster.rs  workstream_layout.rs  workstream_receipt_policy.rs
(+1284 files in other folders)
