[workspace]
resolver = "2"
members = [
  "crates/shiplog-ids",
  "crates/shiplog-schema",
  "crates/shiplog-ports",
  "crates/shiplog-coverage",
  "crates/shiplog-workstreams",
  "crates/shiplog-redact",
  "crates/shiplog-render-md",
  "crates/shiplog-render-json",
  "crates/shiplog-bundle",
  "crates/shiplog-engine",
  "crates/shiplog-ingest-json",
  "crates/shiplog-ingest-github",
  "crates/shiplog-ingest-manual",
  "crates/shiplog-ingest-git",
  "crates/shiplog-ingest-gitlab",
  "crates/shiplog-ingest-jira",
  "crates/shiplog-ingest-linear",
  "crates/shiplog-cache",
  "crates/shiplog-template",
  "crates/shiplog-testkit",
  "crates/shiplog-cluster-llm",
  # New microcrates
  "crates/shiplog-validate",
  "crates/shiplog-export",
  "crates/shiplog-storage",
  "crates/shiplog-notify",
  # New filter/merge/diff/query crates
  "crates/shiplog-filter",
  "crates/shiplog-merge",
  "crates/shiplog-diff",
  "crates/shiplog-query",
  # New Later feature crates
  "crates/shiplog-team",
  "crates/shiplog-cron",
  "crates/shiplog-tui",
  "crates/shiplog-web",
  "crates/shiplog-plugin",
  # New utility crates
  "crates/shiplog-stats",
  "crates/shiplog-sync",
  "crates/shiplog-archive",
  "crates/shiplog-report",
  # New config/watch/transform/migrate crates
  "crates/shiplog-config",
  "crates/shiplog-watch",
  "crates/shiplog-transform",
  "crates/shiplog-migrate",
  # New pipeline extension crates
  "crates/shiplog-scheduler",
  "crates/shiplog-hooks",
  "crates/shiplog-backup",
  # New utility crates (auth, crypto, logging, metrics)
  "crates/shiplog-auth",
  "crates/shiplog-crypto",
  "crates/shiplog-logging",
  "crates/shiplog-metrics",
  # New messaging crates (pubsub, queue, eventbus, workflow)
  "crates/shiplog-pubsub",
  "crates/shiplog-queue",
  "crates/shiplog-eventbus",
  "crates/shiplog-workflow",
  "apps/shiplog",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
description = "Shipping packet generator for developers: compile GitHub activity into editable self-review packets with receipts."
homepage = "https://effortlessmetrics.com/shiplog"
repository = "https://github.com/EffortlessMetrics/shiplog"
keywords = ["developer-tools", "github", "self-review", "audit-trail", "changelog"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
chrono = { version = "0.4.43", features = ["serde"] }
sha2 = "0.10.9"
hex = "0.4.3"
clap = { version = "4.5.58", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
url = "2.5.8"
itertools = "0.14.0"
proptest = "1.10.0"
insta = "1.46.3"
zip = "8.0.0"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
tempfile = "3.25.0"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
