[package]
name = "shiplog-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
shiplog-ingest-json = { path = "../crates/shiplog-ingest-json" }
shiplog-ingest-github = { path = "../crates/shiplog-ingest-github" }
shiplog-ingest-manual = { path = "../crates/shiplog-ingest-manual" }
shiplog-workstreams = { path = "../crates/shiplog-workstreams" }
shiplog-schema = { path = "../crates/shiplog-schema" }
shiplog-ids = { path = "../crates/shiplog-ids" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
