[package]
name = "shiplog-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
shiplog-ingest-json = { path = "../crates/shiplog-ingest-json" }
shiplog-ingest-github = { path = "../crates/shiplog-ingest-github" }
shiplog-ingest-manual = { path = "../crates/shiplog-ingest-manual" }
shiplog-workstreams = { path = "../crates/shiplog-workstreams" }
shiplog-schema = { path = "../crates/shiplog-schema" }
shiplog-ids = { path = "../crates/shiplog-ids" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "parse_jsonl"
path = "fuzz_targets/parse_jsonl.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_workstreams"
path = "fuzz_targets/parse_workstreams.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_github_api"
path = "fuzz_targets/parse_github_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_config"
path = "fuzz_targets/parse_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_manual_events"
path = "fuzz_targets/parse_manual_events.rs"
test = false
doc = false
bench = false
