[package]
name = "shiplog-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
shiplog-ingest-json = { path = "../crates/shiplog-ingest-json" }
shiplog-ingest-github = { path = "../crates/shiplog-ingest-github" }
shiplog-ingest-manual = { path = "../crates/shiplog-ingest-manual" }
shiplog-manual-events = { path = "../crates/shiplog-manual-events", version = "0.2.1" }
shiplog-workstreams = { path = "../crates/shiplog-workstreams" }
shiplog-schema = { path = "../crates/shiplog-schema" }
shiplog-workstream-receipt-policy = { path = "../crates/shiplog-workstream-receipt-policy", version = "0.2.1" }
shiplog-ids = { path = "../crates/shiplog-ids" }
shiplog-redaction-profile = { path = "../crates/shiplog-redaction-profile" }
shiplog-redaction-repo = { path = "../crates/shiplog-redaction-repo" }
shiplog-redaction-policy = { path = "../crates/shiplog-redaction-policy" }
shiplog-redaction-projector = { path = "../crates/shiplog-redaction-projector" }
shiplog-cache-key = { path = "../crates/shiplog-cache-key" }
shiplog-workstream-cluster = { path = "../crates/shiplog-workstream-cluster", version = "0.2.1" }
shiplog-ports = { path = "../crates/shiplog-ports", version = "0.2.1" }
shiplog-cache-stats = { path = "../crates/shiplog-cache-stats" }
shiplog-cache-expiry = { path = "../crates/shiplog-cache-expiry" }
shiplog-cache-sqlite = { path = "../crates/shiplog-cache-sqlite" }
shiplog-date-windows = { path = "../crates/shiplog-date-windows" }
shiplog-cluster-llm-prompt = { path = "../crates/shiplog-cluster-llm-prompt", version = "0.2.1" }
shiplog-cluster-llm-parse = { path = "../crates/shiplog-cluster-llm-parse", version = "0.2.1" }
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "parse_jsonl"
path = "fuzz_targets/parse_jsonl.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_workstreams"
path = "fuzz_targets/parse_workstreams.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_github_api"
path = "fuzz_targets/parse_github_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_config"
path = "fuzz_targets/parse_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_manual_events"
path = "fuzz_targets/parse_manual_events.rs"
test = false
doc = false
bench = false

# ============================================================================
# ROADMAP Feature Fuzzing Targets
# ============================================================================

[[bin]]
name = "parse_gitlab_api"
path = "fuzz_targets/parse_gitlab_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_jira_linear_api"
path = "fuzz_targets/parse_jira_linear_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_template"
path = "fuzz_targets/parse_template.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_plugin_manifest"
path = "fuzz_targets/parse_plugin_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "redact_policy"
path = "fuzz_targets/redact_policy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "redaction_profile"
path = "fuzz_targets/redaction_profile.rs"
test = false
doc = false
bench = false

[[bin]]
name = "redaction_repo"
path = "fuzz_targets/redaction_repo.rs"
test = false
doc = false
bench = false

[[bin]]
name = "redaction_projector"
path = "fuzz_targets/redaction_projector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_key"
path = "fuzz_targets/cache_key.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_stats"
path = "fuzz_targets/cache_stats.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_expiry"
path = "fuzz_targets/cache_expiry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_sqlite"
path = "fuzz_targets/cache_sqlite.rs"
test = false
doc = false
bench = false

[[bin]]
name = "date_windows"
path = "fuzz_targets/date_windows.rs"
test = false
doc = false
bench = false

[[bin]]
name = "workstream_cluster"
path = "fuzz_targets/workstream_cluster.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cluster_llm_prompt"
path = "fuzz_targets/cluster_llm_prompt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cluster_llm_parse"
path = "fuzz_targets/cluster_llm_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "workstream_receipt_policy"
path = "fuzz_targets/workstream_receipt_policy.rs"
test = false
doc = false
bench = false
