[package]
name = "shiplog"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
shiplog-engine = { path = "../../crates/shiplog-engine", version = "0.1.1" }
shiplog-ingest-github = { path = "../../crates/shiplog-ingest-github", version = "0.1.1" }
shiplog-ingest-json = { path = "../../crates/shiplog-ingest-json", version = "0.1.1" }
shiplog-render-md = { path = "../../crates/shiplog-render-md", version = "0.1.1" }
shiplog-workstreams = { path = "../../crates/shiplog-workstreams", version = "0.1.1" }
shiplog-redact = { path = "../../crates/shiplog-redact", version = "0.1.1" }
shiplog-ports = { path = "../../crates/shiplog-ports", version = "0.1.1" }

