[package]
name = "shiplog-aggregator"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Aggregation utilities for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-aggregator"
repository.workspace = true
homepage.workspace = true
keywords = ["shiplog", "aggregator", "pattern", "pipeline", "processing"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
anyhow.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
