[package]
name = "shiplog-alias"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Deterministic alias generation and cache persistence contracts for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-alias"
repository.workspace = true
homepage.workspace = true
keywords = ["alias", "redaction", "privacy", "deterministic", "cache"]
categories = ["development-tools", "text-processing"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
insta.workspace = true

[lints]
workspace = true
