[package]
name = "shiplog-archive"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Archive/compress old packets."
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
