[package]
name = "shiplog-archive"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Archive/compress old packets."
readme = "README.md"
documentation = "https://docs.rs/shiplog-archive"
repository.workspace = true
homepage.workspace = true
keywords = ["shiplog", "archive", "storage", "io", "filesystem"]
categories = ["development-tools", "filesystem"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
