[package]
name = "shiplog-async"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Async utilities for shiplog."
readme = "README.md"

[dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros", "sync", "time"] }
anyhow.workspace = true
