[package]
name = "shiplog-auth"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Authentication and authorization utilities for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-auth"
repository.workspace = true
homepage.workspace = true
keywords = ["shiplog", "auth", "security", "authentication", "cryptography"]
categories = ["authentication", "cryptography"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
