[package]
name = "shiplog-batcher"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Batching utilities for bulk shiplog operations."
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
