[package]
name = "shiplog-bloom"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Bloom filter implementation for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-bloom"
repository.workspace = true
homepage.workspace = true
keywords = ["shiplog", "bloom", "data-structure", "collection", "algorithm"]
categories = ["data-structures", "algorithms"]

[dependencies]
anyhow.workspace = true

[dev-dependencies]
proptest.workspace = true
