[package]
name = "shiplog-bst"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Binary Search Tree implementation for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-bst"
repository.workspace = true
homepage.workspace = true
keywords = ["shiplog", "bst", "data-structure", "collection", "algorithm"]
categories = ["data-structures", "algorithms"]

[dependencies]
anyhow.workspace = true

[dev-dependencies]
proptest.workspace = true
