[package]
name = "shiplog-btree"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "B-Tree implementation for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-btree"
repository.workspace = true
homepage.workspace = true
keywords = ["shiplog", "btree", "data-structure", "collection", "algorithm"]
categories = ["data-structures", "algorithms"]

[dependencies]
anyhow.workspace = true

[lints]
workspace = true
