[package]
name = "shiplog-bucket"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Token bucket implementation for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-bucket"
repository.workspace = true
homepage.workspace = true
keywords = ["bucket", "token-bucket", "rate-limiting"]
categories = ["caching", "development-tools"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
