[package]
name = "shiplog-buffer"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Buffer utilities for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-buffer"
repository.workspace = true
homepage.workspace = true
keywords = ["shiplog", "buffer", "streaming", "pipeline", "data-processing"]
categories = ["development-tools", "data-structures"]

[dependencies]
anyhow.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
