[package]
name = "shiplog-bundle"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
serde_json.workspace = true
zip.workspace = true
shiplog-schema = { path = "../shiplog-schema", version = "0.1.1" }
shiplog-ids = { path = "../shiplog-ids", version = "0.1.1" }

